@@ -109,6 +109,7 @@ class AboutRoomsDialog(GenericTableDialog):
 		"/tick /t", _("Set your personal ticker"),
 	        "", "",
 	        "/add /ad '" + _("user")+"'", _("Add user 'user' to your user list"),
+		"/rem /unbuddy '" + _("user")+"'", _("Remove user 'user' from your user list"),
 	        "/browse /b '" + _("user")+"'", _("Browse files of user 'user'"),
 	        "/whois /w '" + _("user")+"'", _("Request user info for user 'user'"),
 	        "/ip '" + _("user")+"'", _("Show IP for user 'user'"),
@@ -116,6 +117,7 @@ class AboutRoomsDialog(GenericTableDialog):
 	        "/alias /al '" + _("command") + "' '" +_("definition")+"'" , _("Add a new alias"),
 		"/alias /al '" + _("command") + "' '" +_("definition")+"' |("+_("process")+")", _("Add a new alias that runs a process"),
 	        "/unalias /un '" + _("command")+"'", _("Remove an alias"),
+		"/now '", _("Display the Now Playing script's output"),
 	        "", "",
 	        "/ban '" + _("user")+"'", _("Add user 'user' to your ban list"),
 	        "/unban '" + _("user")+"'", _("Remove user 'user' from your ban list"),
@@ -144,6 +146,7 @@ class AboutPrivateDialog(GenericTableDialog):
 	        "/clear /cl", _("Clear the chat window"),
 	        "", "",
 	        "/add /ad '" + _("user")+"'" , _("Add user 'user' to your user list"),
+		"/rem /unbuddy '" + _("user")+"'", _("Remove user 'user' from your user list"),
 	        "/browse /b '" + _("user")+"'" , _("Browse files of user 'user'"),
 	        "/whois /w '" + _("user")+"'" , _("Request user info for user 'user'"),
 	        "/ip '" + _("user")+"'" , _("Show IP for user 'user'"),
@@ -151,6 +154,7 @@ class AboutPrivateDialog(GenericTableDialog):
 	        "/alias /al '" + _("command") + "' '" +_("definition")+"'" , _("Add a new alias"),
 	        "/alias /al '" + _("command") + "' '" +_("definition") + "' |("+_("process")+")", _("Add a new alias that runs a process"),
 	        "/unalias /un '" + _("command")+"'", _("Remove an alias"),
+		"/now '", _("Display the Now Playing script's output"),
 	        "", "",
 	        "/ban '" + _("user")+"'" , _("Add user 'user' to your ban list"),
 	        "/unban '" + _("user")+"'" , _("Remove user 'user' from your ban list"),
