@@ -54,7 +54,7 @@
 		      <accelerator key="C" modifiers="GDK_MOD1_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image284">
+			<widget class="GtkImage" id="image337">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-connect</property>
 			  <property name="icon_size">1</property>
@@ -76,7 +76,7 @@
 		      <accelerator key="D" modifiers="GDK_MOD1_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image285">
+			<widget class="GtkImage" id="image338">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-disconnect</property>
 			  <property name="icon_size">1</property>
@@ -98,7 +98,7 @@
 		      <accelerator key="A" modifiers="GDK_MOD1_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image286">
+			<widget class="GtkImage" id="image339">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-missing-image</property>
 			  <property name="icon_size">1</property>
@@ -119,7 +119,7 @@
 		      <signal name="activate" handler="OnCheckPrivileges" last_modification_time="Wed, 16 Jul 2003 14:18:47 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image287">
+			<widget class="GtkImage" id="image340">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-jump-to</property>
 			  <property name="icon_size">1</property>
@@ -213,7 +213,28 @@
 		      <accelerator key="S" modifiers="GDK_MOD1_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image288">
+			<widget class="GtkImage" id="image341">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-preferences</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="now_playing1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Configure _Now Playing</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="OnNowPlayingConfigure" last_modification_time="Fri, 20 Oct 2006 20:30:42 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image342">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-preferences</property>
 			  <property name="icon_size">1</property>
@@ -240,7 +261,7 @@
 		      <signal name="activate" handler="OnRescan" last_modification_time="Mon, 28 Jul 2003 12:49:11 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image289">
+			<widget class="GtkImage" id="image343">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-refresh</property>
 			  <property name="icon_size">1</property>
@@ -261,7 +282,7 @@
 		      <signal name="activate" handler="OnBuddyRescan" last_modification_time="Sat, 10 Jun 2006 21:43:23 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image290">
+			<widget class="GtkImage" id="image344">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-refresh</property>
 			  <property name="icon_size">1</property>
@@ -282,7 +303,7 @@
 		      <signal name="activate" handler="OnBrowseMyShares" last_modification_time="Tue, 26 Aug 2003 16:00:37 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image291">
+			<widget class="GtkImage" id="image345">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-harddisk</property>
 			  <property name="icon_size">1</property>
@@ -310,7 +331,7 @@
 		      <accelerator key="X" modifiers="GDK_MOD1_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image292">
+			<widget class="GtkImage" id="image346">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-quit</property>
 			  <property name="icon_size">1</property>
@@ -344,7 +365,7 @@
 		      <signal name="activate" handler="OnChatRooms" last_modification_time="Sun, 28 May 2006 23:35:44 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image293">
+			<widget class="GtkImage" id="image347">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-jump-to</property>
 			  <property name="icon_size">1</property>
@@ -365,7 +386,7 @@
 		      <signal name="activate" handler="OnPrivateChat" last_modification_time="Sun, 28 May 2006 23:35:44 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image294">
+			<widget class="GtkImage" id="image348">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-jump-to</property>
 			  <property name="icon_size">1</property>
@@ -386,7 +407,7 @@
 		      <signal name="activate" handler="OnDownloads" last_modification_time="Sun, 28 May 2006 23:35:44 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image295">
+			<widget class="GtkImage" id="image349">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-go-down</property>
 			  <property name="icon_size">1</property>
@@ -407,7 +428,7 @@
 		      <signal name="activate" handler="OnUploads" last_modification_time="Sun, 28 May 2006 23:35:44 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image296">
+			<widget class="GtkImage" id="image350">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-go-up</property>
 			  <property name="icon_size">1</property>
@@ -428,7 +449,7 @@
 		      <signal name="activate" handler="OnSearchFiles" last_modification_time="Sun, 28 May 2006 23:35:44 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image297">
+			<widget class="GtkImage" id="image351">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-find</property>
 			  <property name="icon_size">1</property>
@@ -449,7 +470,7 @@
 		      <signal name="activate" handler="OnUserInfo" last_modification_time="Sun, 28 May 2006 23:35:44 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image298">
+			<widget class="GtkImage" id="image352">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-dialog-info</property>
 			  <property name="icon_size">1</property>
@@ -470,7 +491,7 @@
 		      <signal name="activate" handler="OnUserBrowse" last_modification_time="Sun, 28 May 2006 23:35:44 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image299">
+			<widget class="GtkImage" id="image353">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-harddisk</property>
 			  <property name="icon_size">1</property>
@@ -491,7 +512,7 @@
 		      <signal name="activate" handler="OnInterests" last_modification_time="Sun, 28 May 2006 23:35:44 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image300">
+			<widget class="GtkImage" id="image354">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-jump-to</property>
 			  <property name="icon_size">1</property>
@@ -512,7 +533,7 @@
 		      <signal name="activate" handler="OnUserList" last_modification_time="Sun, 28 May 2006 23:35:44 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image301">
+			<widget class="GtkImage" id="image355">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-index</property>
 			  <property name="icon_size">1</property>
@@ -547,7 +568,7 @@
 		      <accelerator key="F1" modifiers="0" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image302">
+			<widget class="GtkImage" id="image356">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-help</property>
 			  <property name="icon_size">1</property>
@@ -568,7 +589,7 @@
 		      <signal name="activate" handler="OnSourceForgeProject" last_modification_time="Fri, 15 Sep 2006 02:37:43 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image303">
+			<widget class="GtkImage" id="image357">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-home</property>
 			  <property name="icon_size">1</property>
@@ -589,7 +610,7 @@
 		      <signal name="activate" handler="OnTrac" last_modification_time="Fri, 15 Sep 2006 02:37:43 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image304">
+			<widget class="GtkImage" id="image358">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-dialog-question</property>
 			  <property name="icon_size">1</property>
@@ -616,7 +637,7 @@
 		      <signal name="activate" handler="OnAboutChatroomCommands" last_modification_time="Wed, 16 Jul 2003 14:18:47 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image305">
+			<widget class="GtkImage" id="image359">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-help</property>
 			  <property name="icon_size">1</property>
@@ -637,7 +658,7 @@
 		      <signal name="activate" handler="OnAboutPrivateChatCommands" last_modification_time="Wed, 16 Jul 2003 14:18:47 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image306">
+			<widget class="GtkImage" id="image360">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-help</property>
 			  <property name="icon_size">1</property>
@@ -664,7 +685,7 @@
 		      <signal name="activate" handler="OnAboutFilters" last_modification_time="Wed, 16 Jul 2003 14:18:47 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image307">
+			<widget class="GtkImage" id="image361">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-help</property>
 			  <property name="icon_size">1</property>
@@ -691,7 +712,7 @@
 		      <signal name="activate" handler="OnCheckLatest" last_modification_time="Tue, 26 Aug 2003 21:26:11 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image308">
+			<widget class="GtkImage" id="image362">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-connect</property>
 			  <property name="icon_size">1</property>
@@ -718,7 +739,7 @@
 		      <signal name="activate" handler="OnAbout" last_modification_time="Wed, 16 Jul 2003 14:18:47 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image309">
+			<widget class="GtkImage" id="image363">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-about</property>
 			  <property name="icon_size">1</property>
